[gd_scene load_steps=5 format=3 uid="uid://cd4n8lsapjlp3"]

[ext_resource type="Script" path="res://lvl_up_menu.gd" id="1_1nvw2"]
[ext_resource type="Shader" path="res://pause_menu.gdshader" id="2_jh6sb"]
[ext_resource type="Texture2D" uid="uid://i4cjdwy1kcoj" path="res://icon.png" id="3_huqvi"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7bifv"]
shader = ExtResource("2_jh6sb")
shader_parameter/amount = 3.0

[node name="LVLUpMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1nvw2")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_7bifv")
layout_mode = 0
offset_left = -1204.0
offset_top = -695.0
offset_right = 2388.0
offset_bottom = 1259.0

[node name="ColorRect2" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 451.0
offset_top = 332.0
offset_right = 1460.0
offset_bottom = 682.0
color = Color(1, 1, 0.682353, 0.882353)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 570.0
offset_top = 317.0
offset_right = 1343.0
offset_bottom = 708.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Upgrade1" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
icon = ExtResource("3_huqvi")

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4

[node name="Upgrade2" type="Button" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2
icon = ExtResource("3_huqvi")

[node name="VBoxContainer3" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4

[node name="Upgrade3" type="Button" parent="MarginContainer/VBoxContainer3"]
layout_mode = 2
icon = ExtResource("3_huqvi")

[connection signal="pressed" from="MarginContainer/VBoxContainer/Upgrade1" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Upgrade1" to="." method="_on_upgrade_1_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer2/Upgrade2" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer2/Upgrade2" to="." method="_on_upgrade_2_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer3/Upgrade3" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer3/Upgrade3" to="." method="_on_upgrade_3_pressed"]
